[FIX] Fix du paiement des sessions non payées